@@ -20,6 +20,19 @@
 #
 # History:
 #
+# sc    03/30/2021
+#       - TR13485/removed the final query of the database because it was
+#       picking more ids than it should. See TR for more info:
+# for t in theDiffs:
+#
+#   infoList = inferredLookup[t]
+#   for s in infoList:
+#        fp.write(t + reportlib.TAB + s)
+#        rows = rows + 1
+#   This was being plugged into a query using the realid - but it was returning 
+#   more than it should because of the wildcard suffix:
+#   toSelect = '%' + t + '%'
+#       
 # lec	07/25/2016
 #	- TR12222/expects only one delimiter, but *any* delimiter may be used in inferredFrom field
 #
@@ -71,84 +84,86 @@ bucketMGI = set(mgiLookup)
 # read in all annotations that contains MGD or GO
 
 db.sql('''
-        select a._Term_key, a._Object_key, e._AnnotEvidence_key, e.inferredFrom, 
-               t.abbreviation as evidenceCode
+        select a._Term_key, a._Object_key, e._AnnotEvidence_key, e.inferredFrom,
+               t.abbreviation as evidenceCode, m.symbol, aa.accid as goID
         into temporary table annotations 
-        from VOC_Annot a, VOC_Evidence e, VOC_Term t 
+        from VOC_Annot a, VOC_Evidence e, VOC_Term t, MRK_Marker m, 
+                ACC_Accession aa
         where a._AnnotType_key = 1000 
         and a._Annot_key = e._Annot_key 
+        and a._Object_key = m._Marker_key
         and e.inferredFrom is not null 
         and (e.inferredFrom like '%MGI%' or e.inferredFrom like '%GO%')
         and e._EvidenceTerm_key = t._Term_key
+        and a._Term_key = aa._Object_key
+        and aa._MGIType_key = 13
+        and aa.preferred = 1
         ''', None)
-db.sql('create index annotations_idx1 on annotations(_Term_key)', None)
-db.sql('create index annotations_idx2 on annotations(_Object_key)', None)
-db.sql('create index annotations_idx3 on annotations(inferredFrom)', None)
 
 #
 # set of MGI, GO ids in 'inferredFrom'
 #
 
-results = db.sql('select _AnnotEvidence_key, inferredFrom from annotations', 'auto')
+results = db.sql('''select _AnnotEvidence_key, inferredFrom, symbol, 
+        evidenceCode, goID  
+        from annotations''', 'auto')
 
-inferredLookup = []
+# {realid:[list of infoStrings], ...}
+inferredLookup = {}
 keysLookup = []
 for r in results:
     ids = r['inferredFrom']
     key = r['_AnnotEvidence_key']
+    # for potential reporting:
+    symbol = r['symbol']
+    evidenceCode = r['evidenceCode']
+    goID = r['goID']
+    infoString = '%s%s%s%s%s%s' % (goID, reportlib.TAB, evidenceCode, reportlib.TAB, symbol, reportlib.CRT)
 
+    print('ids: %s' % ids)
+    print('key: %s' % key)
     # any of these delimiters may be used
     ids = ids.replace(',', '|')
     ids = ids.replace(', ', '|')
     ids = ids.replace(';', '|')
     idList = str.split(ids, '|')
+    print('idList: %s' % idList)
 
     for id in idList:
         # save id as-is to check for lowercase/uppercase variations
         realid = id
         id.replace('"', '')
         id = id.upper()
-
+        print('realid: %s id: %s' % (realid, id))
         if str.find(id, 'MGI:') >= 0 or str.find(id, 'GO:') >= 0:
            if realid not in inferredLookup:
-              inferredLookup.append(realid)
+              print('realid added to inferredLookup: %s' % realid)
+              #inferredLookup.append(realid)
+              if realid not in inferredLookup: 
+                  inferredLookup[realid] = []
+              inferredLookup[realid].append(infoString)
               keysLookup.append(key)
 
 #
 # bucket of all inferred-from ids
 #
 
-bucketInferred = set(inferredLookup)
+bucketInferred = set(inferredLookup.keys())
+print('bucketInferred: %s' % bucketInferred)
 
 #
 # compare inferred-from ids to MGI ids
 #
 
 theDiffs = bucketInferred.difference(bucketMGI)
-
+print('theDiffs: %s' % theDiffs)
 row = 0
 for t in theDiffs:
 
-   toSelect = '%' + t + '%'
-
-   results = db.sql('''
-        select a.accID, m.symbol, e.evidenceCode, e._AnnotEvidence_key
-        from annotations e, ACC_Accession a, MRK_Marker m 
-        where e._Term_key = a._Object_key 
-        and a._MGIType_key = 13 
-        and a.preferred = 1 
-        and e._Object_key = m._Marker_key 
-        and e.inferredFrom like '%s'
-        ''' % (toSelect), 'auto')
-
-   for r in results:
-      key = r['_AnnotEvidence_key']
-      if key in keysLookup:
-          fp.write(t + reportlib.TAB + \
-                   r['accID'] + reportlib.TAB + \
-                   r['evidenceCode'] + reportlib.TAB + \
-                   r['symbol'] + reportlib.CRT)
-          rows = rows + 1
+   infoList = inferredLookup[t]
+   for s in infoList:
+        fp.write(t + reportlib.TAB + s)
+        rows = rows + 1
 
 #
 # include list of inferred-from values that contain ';'
