@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-16-17
+DATE: 03/30/2021
+STAFF: sc
+TR13485/Fix bug in mgd/VOC_InvalidInferred.py - see TR
+
 TAG: qcreports_db-6-0-16-16
 DATE: 03/12/2021
 STAFF: dbm
